style.css
:root {
	--bg-color: #000;
	--main-color: lime;
	--border-width: 5px;
}
body {
	font-family: "Roboto Mono", monospace;
	font-style: normal;
	color: var(--main-color);
	background-color: var(--bg-color);
	padding: 0px;
	margin: 0px;
	width: 100vw;
	height: 100vh;
	display: flex;
	align-content: center;
	justify-content: center;
}
input[type="range"] {
	-webkit-appearance: none;
	background: transparent;
}
input[type="range"]::-webkit-slider-thumb{
	-webkit-appearance: none;
}
input[type="range"] {
	outline: none;
}
input[type="range"]::-ms-track {
	width: 100%;
	cursor: pointer;
	background: transparent;
	border-color: transparent;
	color: transparent;
}
.container {
	display: flex;
	flex-wrap: wrap;
	position: relative;
	width: 90%;
	height: 90%;
	background-color: var(--bg-color);
	margin: auto;
	padding: 0px;
	align-content: center;
	justify-content: center;
}
.window {
	width: 100%;
	height: 100%;
	border: solid var(--border-width) var(--main-color);
	display: flex;
}
.window > * {
	flex: 1;
	border-width: 0px calc(var(--border-width) / 2) 0px 0px;
	border-color: var(--main-color); 
	border-style: solid;
}
.window > *:last-child {
	border-width: 0px 0px 0px calc(var(--border-width) / 2);	
}
.input_file {
	position: absolute;
	width: calc(100% - var(--border-width) * 2);
	height: 100%;
	background-color: var(--bg-color);
	border: none;
	display: flex;
	justify-content: center;
	align-content: center;
	flex-direction: column;
	text-align: center;
	z-index: 2;
}
.input_file > input {
	display: none;
}
.input {
	position: relative;
	overflow-y: scroll;
	overflow-x: hidden;
}
.input > div > input[type="text"] {
	background-color: var(--bg-color);
	color: var(--main-color);
	border: solid calc(var(--border-width) / 2) var(--main-color);
	border-radius: 0px;
	padding: 5px 2px;
	width: calc(100% - var(--border-width) - 3px);
}
.input > div > input[type="range"] {
	width: 100%;
	margin: 0px;
	padding: 0px;
}
.input > div > input[type="range"]::-webkit-slider-thumb {
	width: 32px;
	height: 32px;
	border: solid 2px var(--main-color);
	border-radius: 0px;
	cursor: pointer;
	background-color: var(--bg-color);
}
.input > div > input[type="range"]::-moz-range-thumb {
	width: 32px;
	height: 32px;
	border: solid 2px var(--main-color);
	border-radius: 0px;
	cursor: pointer;
	background-color: var(--bg-color);
}
.input > div > input[type="range"]::-ms-thumb {
	width: 32px;
	height: 32px;
	border: solid 2px var(--main-color);
	border-radius: 0px;
	cursor: pointer;
	background-color: var(--bg-color);
}
.input > div > input[type="range"]::-webkit-slider-runnable-track {
	width: 100%;
	height: 8px;
	cursor: pointer;
	border: solid 2px var(--bg-color);
	outline: 2px solid var(--main-color);
	background-color: var(--bg-color);
}
.input > div > input[type="range"]:hover::-webkit-slider-runnable-track {
	background-color: var(--main-color);
}
.input > div > input[type="range"]::-ms-track{
	width: 100%;
	height: 8px;
	cursor: pointer;
	border: solid 1px var(--bg-color);
	outline: 2px solid var(--main-color);
	background-color: var(--bg-color);
}
.input > div > input[type="range"]:hover::-ms-track{
	background-color: var(--main-color);
}
.input > div > input[type="range"]::-moz-range-track{
	width: 100%;
	height: 8px;
	cursor: pointer;
	border: solid 1px var(--bg-color);
	outline: 2px solid var(--main-color);
	background-color: var(--bg-color);
}
.input > div > input[type="range"]:hover::-moz-range-track{
	background-color: var(--main-color);
}
.input input[type="checkbox"], .input input[type="radio"] {
	display: none;
}
input[type="checkbox"]:checked + label.checkbox, input[type="radio"]:checked + label.checkbox {
	text-decoration: underline 2px;
	text-underline-offset: 3px;
}
label.checkbox {
	font-size: 16px;
	text-transform: uppercase;
	cursor: pointer;
}
.input__submit {
	height: 10%;
	width: 100%;
	background-color: var(--main-color);
	color: var(--bg-color);
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	align-content: center;
	position: absolute;
	bottom: 0px;
	font-size: 2em;
	font-weight: 300;
}
.input__submit > input {
	display: none;
}
.input > div {
	width: 100%;
	border-style: dashed;
	border-color: var(--main-color);
	border-width: 0px 0px 3px 0px;
	padding-bottom: 20px;
	margin-bottom: 20px;
}
.input > div:first-child {
	margin-top: 20px;
}
.input > div > h3 {
	margin: 0px;
	margin-bottom: 5px;
}

.output {
	display: flex;
	position: relative;
	align-content: center;
	justify-content: center;
}
.output > * {
	position: absolute;
	width: 100%;
	margin: 0px;
	padding: 0px;
}
.output > p {
	display: flex;
	white-space: pre-wrap;
	font-size: 16px;
	line-height: 1em;
	flex-wrap: wrap;
}
.output > p > div {
	width: 100%;
	display: flex;
	justify-content: space-between;
}
.output > p > div > span {
	background-color: var(--bg-color);
}

